--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "drag and drop files generates url and allows other to dl",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server/server.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +26,12 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "body-parser": "^1.15.2",
+    "browserify": "^13.1.0",
+    "express": "^4.14.0",
+    "nodemon": "^1.10.0",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "webtorrent": "^0.96.4"
   }
 }
