--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.15.2",
     "browserify": "^13.1.0",
     "express": "^4.14.0",
+    "json-loader": "^0.5.4",
     "nodemon": "^1.10.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
